# saas-data-platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
config/env/: dev.yaml  main.yaml  qa.yaml
config/tenants/: ec.yaml  gt.yaml  hn.yaml  jm.yaml  pe.yaml  sv.yaml
data/raw/: global_mobility_data_entrega_productos.csv  materials_catalog.csv
databricks/: run_pipeline.py  setup.sql
docs/: databricks.md  infra.md  observations.md  onboarding-tenant.md
mentoring/: bad_code.py  code_review.md  good_code.py  how_to_explain_to_junior.md
src/saas_pipeline/: __init__.py  bronze.py  cli.py  config.py  gold.py  logging_config.py  paths.py  pipeline.py  quality.py  schemas.py  silver.py  spark_session.py  storage.py  transforms.py
tests/: conftest.py  test_config.py  test_gold.py  test_quality.py  test_silver_transforms.py
