[project]
name = "saas-data-platform"
version = "0.1.0"
description = "Multi-tenant Medallion data pipeline (Bronze/Silver/Gold) on PySpark + Delta Lake"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
    "omegaconf==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
    "pre-commit==3.8.0",
]

[project.scripts]
saas-pipeline = "saas_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saas_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pep8-naming (N), pyupgrade (UP), bugbear (B)
select = ["E", "W", "F", "I", "N", "UP", "B"]
# `from pyspark.sql import functions as F` is the universal PySpark idiom.
ignore = ["N812"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
